# geometric-procesing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  IterativeClosestPoint.cpp  IterativeClosestPoint.h  NormalEstimator.cpp  NormalEstimator.h  PointCloud.cpp  PointCloud.h  README.md  imgui.ini  main.cpp  utils.cpp  utils.h
01-icp-base/: Application.cpp  CMakeSettings.json  IterativeClosestPoint.h  NearestNeighbors.h  NormalEstimator.cpp  NormalEstimator.h  PointCloud.cpp  Scene.cpp  Scene.h  SegmentCloud.cpp  ShaderProgram.h  imgui.ini  utils.cpp  utils.h
02-reconstruction-base/: CMakeLists.txt  RBFFunction.cpp  RBFFunction.h  Scene.cpp  Scene.h  Shader.h  SimpleDistance.cpp  SimpleDistance.h  SphereFunction.cpp  SphereFunction.h  TriangleMesh.cpp  main.cpp  utils.cpp  utils.h
03-curvatures-base/: CMakeLists.txt  CMakeSettings.json  MongePatch.cpp  MongePatch.h  Scene.cpp  Scene.h  TriangleMesh.cpp  main.cpp
04-smoothing-base/: CMakeLists.txt  CMakeSettings.json  LaplacianSmoothing.cpp  Scene.cpp  Scene.h  ShaderProgram.cpp  TriangleMesh.cpp  imgui.ini  main.cpp
06-parameterization-base/: Application.cpp  CMakeLists.txt  Parameterizer.cpp  Scene.cpp  Scene.h  TriangleMesh.cpp  main.cpp  timing.cpp
corrupted/: horse.ply
